welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:23: error: not found: value fini
  					fini = true;
                                        ^